syntax ="proto3";
package io.busgo.ping;
option go_package ="./pb";


service PingService {
    rpc Ping(PingRequest)returns(PingResponse);
}


message PingRequest {
    string ping =1;
}


message PingResponse {

    string pong =1;
}